@startuml Q2_TelecommandeDiagramme
class Telecommande{
    +Telecommande()
    +ajouterAppareil(Appareil a)
    +activerAppareil(int i)
    +desactiverAppareil(int i)
    +activerTout()
    +desactiverTout()
    +toString() : String
    +getAppareil(int i) : Appareil
    +getNombre() : int
}
class Lampe{
    -allume : boolean
    +Lampe()
    +allumer()
    +eteindre()
    +toString() : String
    +isAlllume() : boolean
}
class Hifi{
    -son : int
    +allumer()
    +eteindre()
    +toString() : String
    +isAllume() : boolean
}
class Cheminee {
    -intensite : int
    +Cheminee()
    +changerIntensite(int i)
    +toString() : String
    +getLumiere() : int 
}
abstract class ChemineeAppareil{
    +ChemineeAppareil()
    +allumer()
    +eteindre()
    +toString() : String
    +isAllume() : boolean
}
abstract class Appareil{
    +abstract allumer()
    +abstract eteindre()
    +abstract toString() : String
    +abstract isAllume() : boolean
}
Telecommande "1" -> "0..*" Appareil : -Appareil
Appareil <|-- Lampe
Appareil <|-- Hifi
Appareil <|-- ChemineeAppareil
ChemineeAppareil "1" -> "1" Cheminee : -Cheminee


@enduml